feat: Update application name to GUARDIAN EYE 2027777777
Updates the application's internal package name and metadata to reflect the new official project name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guardian-eye-2026",
+  "name": "guardian-eye-2027777777",
   "private": true,
   "version": "0.0.0",
   "type": "module",
